<resources>
    <string name="app_name">api calls app</string>
    <string name="logInButton">LOGIN</string>
    <string name="signUpButton">SIGN UP</string>
    <string name="submitBtn">SUBMIT</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">E-mail</string>
    <string name="userPosts">Your posts:</string>
    <string name="addPostButton">Add Post</string>
    <string name="editPostButton">Edit</string>
    <string name="addPostHint">Type here...</string>
    <string name="alertDialogMsg">After you delete this post you will not be able see this post anymore.</string>
    <string name="alertDialogTitle">Are you sure you want to delete this post?</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="editTitle">Edit post</string>
</resources>
