<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/usernameSignupET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/usernameHint"/>

    <EditText
        android:id="@+id/passwordSignupET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_margin="25dp"
        android:hint="@string/passwordHint"/>

    <EditText
        android:id="@+id/emailSignupET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_margin="25dp"
        android:hint="@string/emailHint"/>

    <Button
        android:id="@+id/submitSignUpBtn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:background="@drawable/buttonshape"
        android:text="@string/submitBtn"
        android:onClick="submitSignUp"/>
</LinearLayout>