<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/emailHint" />

    <EditText
        android:id="@+id/passwordLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_margin="25dp"
        android:hint="@string/passwordHint"/>

    <Button
        android:id="@+id/sendLogInBtn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/logInButton"
        android:layout_margin="25dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:onClick="logIn"/>
</LinearLayout>